# hermes

./: Dockerfile  pyproject.toml
.github/workflows/: dependency-review.yaml  docs.yaml  image-build-push.yaml  python-ci.yaml  python-publish-pypi.yaml
