[project]
name = "tailstory-hermes"
version = "0.4.0"
description = "Shipping tooling"
readme = "README.md"
authors = [
    { name = "Bradley Reynolds", email = "bradley.reynolds@tailstory.dev" },
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
requires-python = ">=3.14"
dependencies = [
    "pydantic-settings>=2.14.1",
    "darbiadev-shipping-types>=0.4.0",
    "typer>=0.26.1",
    "rich>=15.0.0",
    "pandas>=3.0.3",
    "openpyxl>=3.1.5",
]

[project.urls]
repository = "https://github.com/tailstory/hermes/"
documentation = "https://docs.tailstory.dev/hermes/"

[project.scripts]
hermes = "hermes.cli.main:app"

[dependency-groups]
dev = [
    # DX
    "nox>=2026.4.10",
    "prek>=0.4.2",
    # Linters
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "ty>=0.0.39",
    # Types
    "pandas-stubs>=2.2.3.241009",
]
docs = [
    "sphinx>=7.4.4",
    # Theme
    "furo>=2024.5.6",
    # Extensions
    "sphinx-autoapi>=3.1.2",
    "releases>=2.1.1",
]
tests = [
    "coverage>=7.14.0",
    "pytest>=9.0.3",
    # Extensions
    "pytest-randomly>=4.1.0",
    # Reporting
    "allure-pytest>=2.16.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "CPY001", # (Missing copyright notice at top of file) - No license
]

[tool.ruff.lint.extend-per-file-ignores]
"docs/*" = [
    "INP001", # (File `docs/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Docs are not modules
]
"tests/*" = [
    "INP001", # (File `tests/*.py` is part of an implicit namespace package. Add an `__init__.py`.) - Tests are not modules
    "S101", # (Use of `assert` detected) - Yes, that's the point
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.coverage.run]
source = [
    "hermes",
]
